unpackaged/main/default/objects/ResourceAbsence/fields/SDO_Service_WEM_Assigned_to_me__c.field-meta.xml
<CustomField>
    <fullName>SDO_Service_WEM_Assigned_to_me__c</fullName>
    <description>*What*: Used to indicate if absence is assigned to user.  *Who*: Gregory Johnson. *When*: June 2022</description>
    <formula>Resource.RelatedRecordId = $User.Id</formula>
    <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
    <label>Assigned to me?</label>
    <type>Checkbox</type>
</CustomField>