unpackaged/main/default/objects/ResourceAbsence/fields/SDO_Tool_FSLDemoTools_Master_Data__c.field-meta.xml
<CustomField>
    <fullName>SDO_Tool_FSLDemoTools_Master_Data__c</fullName>
    <defaultValue>false</defaultValue>
    <label>FSLDemoTools Master Data</label>
    <type>Checkbox</type>
</CustomField>