unpackaged/main/default/objects/ResourceAbsence/listViews/All_ResourceAbsences.listView-meta.xml
<ListView>
    <fullName>All_ResourceAbsences</fullName>
    <filterScope>Everything</filterScope>
    <label>All Resource Absences</label>
</ListView>