unpackaged/main/default/objects/ResourceAbsence/listViews/My_Resource_Absences.listView-meta.xml
<ListView>
    <fullName>My_Resource_Absences</fullName>
    <columns>Name</columns>
    <columns>Type</columns>
    <columns>Start</columns>
    <columns>End</columns>
    <filterScope>Everything</filterScope>
    <filters>
        <field>Resource</field>
        <operation>contains</operation>
        <value>Tim Service</value>
    </filters>
    <label>My Resource Absences</label>
</ListView>