unpackaged/main/default/objects/ResourceAbsence/listViews/SDO_WEM_My_Upcoming_Resource_Absences.listView-meta.xml
<ListView>
    <fullName>SDO_WEM_My_Upcoming_Resource_Absences</fullName>
    <columns>Type</columns>
    <columns>Description</columns>
    <columns>Start</columns>
    <columns>End</columns>
    <columns>FSL__Approved__c</columns>
    <columns>Name</columns>
    <filterScope>Everything</filterScope>
    <filters>
        <field>SDO_Service_WEM_Assigned_to_me__c</field>
        <operation>equals</operation>
        <value>1</value>
    </filters>
    <filters>
        <field>SDO_Service_WEM_In_the_Past__c</field>
        <operation>equals</operation>
        <value>0</value>
    </filters>
    <label>My Upcoming Resource Absences</label>
</ListView>