unpackaged/main/default/objects/ResourceAbsence/listViews/Workforce_Engagement_Resource_Absences.listView-meta.xml
<ListView>
    <fullName>Workforce_Engagement_Resource_Absences</fullName>
    <columns>Resource</columns>
    <columns>Type</columns>
    <columns>Start</columns>
    <columns>End</columns>
    <filterScope>Everything</filterScope>
    <filters>
        <field>Resource</field>
        <operation>contains</operation>
        <value>Service</value>
    </filters>
    <label>Workforce Engagement Resource Absences</label>
</ListView>